--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import-normalize; /* bring in normalize.css styles */
+@import url(../node_modules/bootstrap-icons/font/bootstrap-icons.css);
 
 body {
   margin: 0;
